@@ -1,7 +1,7 @@
 Package: pacman
 Type: Package
 Title: Package Management Tool
-Version: 0.4.4
+Version: 0.4.5
 Date: 2016-09-06
 Authors@R: c(person("Tyler", "Rinker", role = c("aut", "cre", "ctb"),
         email = "tyler.rinker@gmail.com"), person("Dason",
