@@ -6,11 +6,11 @@ citEntry(entry = "manual",
     author = "Tyler W. Rinker and Dason Kurkiewicz",
     organization = "University at Buffalo/SUNY",
     address = "Buffalo, New York",
-    note = "version 0.4.4",
-    year = "2015",
+    note = "version 0.4.5",
+    year = "2017",
     url = "http://github.com/trinker/pacman",
-    textVersion  = paste("Rinker, T. W. & Kurkiewicz, D. (2015).",
+    textVersion  = paste("Rinker, T. W. & Kurkiewicz, D. (2017).",
         "pacman: Package Management for R.",
-        "version 0.4.4. University at Buffalo. Buffalo, New York.",
+        "version 0.4.5. University at Buffalo. Buffalo, New York.",
         "http://github.com/trinker/pacman")
 )
